Make things less red

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -47,6 +47,9 @@ aside h2
     content: ''
     width: 0
 
+.post-date a
+  color: $color_text
+
 .post-meta li
   border-right: none
   &.comment,
@@ -74,7 +77,7 @@ aside h2
 
   .site-title,
   .site-description
-    color: $color_link
+    color: $color_text
 
   .site-title
     font-size: 36px
@@ -97,6 +100,8 @@ aside h2
     font-size: 24px
     font-weight: 400
     letter-spacing: 0
+    a
+      color: $color_text
 
   .sidebar
     max-width: 260px
