--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,107 +11,6 @@
  Text Domain:  bloggusaiani */
 
 @import "mixins/colors"
+@import "base"
+@import "min-769px/base"
 
-body
-  background: white
-  color: $color_text
-
-  &.content-sidebar .content
-    max-width: 720px
-
-a
-  color: $color_link
-
-p
-  font-size: 14pt
-
-aside h2
-  font-size: 12pt
-
-.inner-wrap
-  background: white
-  max-width: none
-  padding: 0
-
-.widget_recent_entries,
-.widget_archive,
-.widget_categories
-  li:before
-    content: ''
-    width: 0
-
-.post-meta li.categories,
-.post-meta li.author,
-.post-date
-  &:before
-    content: ''
-    width: 0
-
-.post-date a
-  color: $color_text
-
-.post-meta li
-  border-right: none
-  &.comment,
-  &.author
-    display: none
-
-.widget
-  ul,
-  ol
-    li
-      font-size: 10pt
-      padding-bottom: 10px
-      white-space: nowrap
-      overflow: hidden
-      text-overflow: ellipsis
-      width: 100%
-
-@media only screen and (min-width: 769px)
-  .header
-    background: white
-    padding: 40px
-
-  .main-nav
-    border-bottom: none
-
-  .site-title,
-  .site-description
-    color: $color_text
-
-  .site-title
-    font-size: 36px
-    font-weight: 400
-    padding: 20px 0 10px
-    letter-spacing: 0
-
-  .site-description
-    opacity: 1
-
-  .site-intro .avatar
-    border-radius: 6px
-    box-shadow: none
-    width: 60px
-    &:hover
-      transform: none
-
-  .page-title,
-  .post-title
-    font-size: 24px
-    font-weight: 400
-    letter-spacing: 0
-    a
-      color: $color_text
-
-  .sidebar
-    max-width: 260px
-
-    .widget
-      opacity: 1
-
-  input[type="submit"],
-  .button,
-  input[type="button"],
-  .navigation-post a,
-  .navigation-paging a
-    background: $color_link
