Add antialiased to font-smoothing

--- a/sass/base.sass
+++ b/sass/base.sass
@@ -1,10 +1,11 @@
 html
-  font-family: "Lusitana",
+  font-family: 'Lusitana', serif
+  -webkit-font-smoothing: antialiased
 
 body
   background: white
   color: $color_text
-  line-height: 1.6em
+  line-height: 1.65em
 
   &.content-sidebar .content
     max-width: 720px
