Make fonts larger

--- a/sass/base.sass
+++ b/sass/base.sass
@@ -14,7 +14,8 @@ a
   color: $color_link
 
 p
-  font-size: 15pt
+  font-size: 17pt
+  line-height: 1.6em
 
 section.article-content
   ul
@@ -31,12 +32,12 @@ section.article-content
         padding-right: 10px
 
   li
-    font-size: 13pt
+    font-size: 17pt
     padding-bottom: 15px
 
 
 aside h2
-  font-size: 12pt
+  font-size: 13pt
 
 .header
   background: white
@@ -87,6 +88,10 @@ aside h2
     content: ''
     width: 0
 
+.post-meta,
+.post-date
+  font-size: 1em
+
 .post-meta li.categories,
 .post-meta li.author,
 .post-date
@@ -110,7 +115,7 @@ aside h2
   ul,
   ol
     li
-      font-size: 10pt
+      font-size: 12pt
       padding-bottom: 10px
       white-space: nowrap
       overflow: hidden
