--- a/sass/min-769px/base.sass
+++ b/sass/min-769px/base.sass
@@ -1,7 +1,22 @@
 @media only screen and (min-width: 769px)
   .header
     background: white
+    margin-left: 0
+    margin-right: 0
     padding: 40px 0 80px
+
+    a.site-intro
+      img
+        width: 50px
+        margin: 0
+
+      h1,
+      h2
+        text-align: left
+
+      h1
+        padding-top: 15px
+
 
   .inner-wrap
     background: white
@@ -16,4 +31,3 @@
 
     .widget
       opacity: 1
-
