Improve header plus content spacing"

--- a/sass/base.sass
+++ b/sass/base.sass
@@ -1,5 +1,5 @@
 html
-  font-family: 'Lusitana', serif
+  font-family: Georgia, Cambria, serif
   -webkit-font-smoothing: antialiased
 
 body
@@ -8,13 +8,13 @@ body
   line-height: 1.65em
 
   &.content-sidebar .content
-    max-width: 720px
+    max-width: 620px
 
 a
   color: $color_link
 
 p
-  font-size: 16pt
+  font-size: 15pt
   line-height: 1.6em
 
 section.article-content
@@ -32,12 +32,12 @@ section.article-content
         padding-right: 10px
 
   li
-    font-size: 16pt
+    font-size: 15pt
     padding-bottom: 15px
 
 
 aside h2
-  font-size: 13pt
+  font-size: 12pt
 
 .header
   background: white
@@ -56,6 +56,7 @@ aside h2
   font-size: 24px
   font-weight: 700
   letter-spacing: 0
+  line-height: 1.5em
   a
     color: $color_text
 
