--- a/sass/min-769px/base.sass
+++ b/sass/min-769px/base.sass
@@ -3,20 +3,31 @@
     background: white
     margin-left: 0
     margin-right: 0
-    padding: 40px 0 80px
+    padding: 60px 0 80px
 
     a.site-intro
-      img
-        width: 50px
-        margin: 0
+      margin: 0 0 0 6.072028%
 
-      h1,
-      h2
-        text-align: left
+      img
+        border-radius: 4px
+        float: left
+        margin: 0
+        width: 56px
+
+      div.site-intro-header-container
+        float: left
+        margin-left: 20px
+
+        h1,
+        h2
+          text-align: left
 
       h1
-        padding-top: 15px
+        margin-top: 0
+        padding-top: 0
 
+  .content
+    margin-left: 6.072028%
 
   .inner-wrap
     background: white
@@ -28,6 +39,7 @@
 
   .sidebar
     max-width: 260px
+    margin-right: 6.072028%
 
     .widget
       opacity: 1
