Update link, code and pre text colors

--- a/sass/base.sass
+++ b/sass/base.sass
@@ -13,6 +13,15 @@ body
 a
   color: $color_link
 
+code,
+pre
+  background-color: rgba(0, 0, 0, 0.03)
+  color: $color_code_text
+  font-weight: 300
+
+h3
+  margin-top: 1em
+
 p
   font-size: 15pt
   line-height: 1.6em
